--- a/articles/billing/TOC.yml
+++ b/articles/billing/TOC.yml
@@ -1,165 +1,176 @@
+items:
 - name: Dokumentation om Azure Cost Management
   href: index.md
 - name: Förstå Azure-faktureringen
-  expanded: true
   items:
-    - name: Förstå fakturan
-      href: billing-understand-your-bill.md
-    - name: Hämta faktura och användningsdata
-      href: billing-download-azure-invoice-daily-usage-date.md
-    - name: Avgifter för tjänster från tredje part
-      href: billing-understand-your-azure-marketplace-charges.md
-    - name: Förklaring av användningsvillkor
-      href: billing-understand-your-usage.md
-    - name: Förklaring av fakturavillkor
-      href: billing-understand-your-invoice.md
+  - name: Förstå fakturan
+    href: billing-understand-your-bill.md
+  - name: Hämta faktura och användningsdata
+    href: billing-download-azure-invoice-daily-usage-date.md
+  - name: Avgifter för tjänster från tredje part
+    href: billing-understand-your-azure-marketplace-charges.md
+  - name: Förklaring av användningsvillkor
+    href: billing-understand-your-usage.md
+  - name: Förklaring av fakturavillkor
+    href: billing-understand-your-invoice.md
+  expanded: true
 - name: Hantera kostnader
   items:
-    - name: Undvik oväntade kostnader
-      href: billing-getting-started.md
-    - name: Ställa in faktureringsvarningar
-      href: billing-set-up-alerts.md
-    - name: Beräkna priser
-      href: 'https://azure.microsoft.com/pricing/calculator/'
-    - name: Använda resurstaggar
-      href: ../azure-resource-manager/resource-group-using-tags.md?toc=/azure/billing/TOC.json
-    - name: Förstå utgiftsgränser
-      href: billing-spending-limit.md
-    - name: Spara med Azure-reservationer
+  - name: Undvik oväntade kostnader
+    href: billing-getting-started.md
+  - name: Ställa in faktureringsvarningar
+    href: billing-set-up-alerts.md
+  - name: Beräkna priser
+    href: https://azure.microsoft.com/pricing/calculator/
+  - name: Använda resurstaggar
+    href: ../azure-resource-manager/resource-group-using-tags.md?toc=/azure/billing/TOC.json
+  - name: Förstå utgiftsgränser
+    href: billing-spending-limit.md
+  - name: Analysera kostnader
+    href: billing-cost-analysis.md
+  - name: Spara med Azure-reservationer
+    items:
+    - name: Vad är Azure-reservationer?
+      href: billing-save-compute-costs-reservations.md
+    - name: Köpa en reservation
       items:
-        - name: Vad är Azure-reservationer?
-          href: billing-save-compute-costs-reservations.md
-        - name: Köpa en reservation
-          items:
-            - name: Virtuell dator
-              href: ../virtual-machines/windows/prepay-reserved-vm-instances.md?toc=/azure/billing/TOC.json
-            - name: SQL Database
-              href: ../sql-database/sql-database-reserved-capacity.md?toc=/azure/billing/TOC.json
-        - name: Så här tillämpas rabatter
-          items:
-            - name: Reserverade VM-instanser
-              href: billing-understand-vm-reservation-charges.md
-            - name: Reserverad kapacitet för SQL Database
-              href: billing-understand-reservation-charges.md
-        - name: Programvarukostnader som inte ingår
-          href: billing-reserved-instance-windows-software-costs.md
-        - name: Användning för Betala per användning
-          href: billing-understand-reserved-instance-usage.md
-        - name: Användning för Enterprise
-          href: billing-understand-reserved-instance-usage-ea.md
-        - name: Hantera Azure-reservationer
-          href: billing-manage-reserved-vm-instance.md
+      - name: Virtuell dator
+        href: ../virtual-machines/windows/prepay-reserved-vm-instances.md?toc=/azure/billing/TOC.json
+      - name: SQL Database
+        href: ../sql-database/sql-database-reserved-capacity.md?toc=/azure/billing/TOC.json
+    - name: Så här tillämpas rabatter
+      items:
+      - name: Reserverade VM-instanser
+        href: billing-understand-vm-reservation-charges.md
+      - name: Reserverad kapacitet för SQL Database
+        href: billing-understand-reservation-charges.md
+    - name: Programvarukostnader som inte ingår
+      href: billing-reserved-instance-windows-software-costs.md
+    - name: Användning för Betala per användning
+      href: billing-understand-reserved-instance-usage.md
+    - name: Användning för Enterprise
+      href: billing-understand-reserved-instance-usage-ea.md
+    - name: Hantera Azure-reservationer
+      href: billing-manage-reserved-vm-instance.md
 - name: Hantera kontot
   items:
-    - name: Kostnadsfritt konto
-      items:
-        - name: Skapa kostnadsfria tjänster
-          href: billing-create-free-services-included-free-account.md
-        - name: Undvik avgifter
-          href: billing-avoid-charges-free-account.md
-        - name: Kontrollera användning
-          href: billing-check-free-service-usage.md
-        - name: Uppgradera prenumeration
-          href: billing-upgrade-azure-subscription.md
-        - name: Förstå mätarmappning
-          href: billing-understand-free-service-meter-mapping.md
-    - name: Redigera profil
-      href: billing-how-to-change-azure-account-profile.md
-    - name: Bevilja åtkomst till fakturering
-      href: billing-manage-access.md
-    - name: Länka partner-ID
-      href: billing-partner-admin-link-started.md
-    - name: Visa faktureringskonton
-      href: billing-view-all-accounts.md
-    - name: Lös passerat betalningsdatum
-      href: billing-azure-subscription-past-due-balance.md
-    - name: Logga in med Office 365-konto
-      href: billing-use-existing-office-365-account-azure-subscription.md
-    - name: Registrera dig för Office 365 med ett Azure-konto
-      href: billing-use-existing-azure-account-for-office-365-subscription.md
+  - name: Kostnadsfritt konto
+    items:
+    - name: Skapa kostnadsfria tjänster
+      href: billing-create-free-services-included-free-account.md
+    - name: Undvik avgifter
+      href: billing-avoid-charges-free-account.md
+    - name: Kontrollera användning
+      href: billing-check-free-service-usage.md
+    - name: Uppgradera prenumeration
+      href: billing-upgrade-azure-subscription.md
+    - name: Förstå mätarmappning
+      href: billing-understand-free-service-meter-mapping.md
+  - name: Redigera profil
+    href: billing-how-to-change-azure-account-profile.md
+  - name: Bevilja åtkomst till fakturering
+    href: billing-manage-access.md
+  - name: Länka partner-ID
+    href: billing-partner-admin-link-started.md
+  - name: Visa faktureringskonton
+    href: billing-view-all-accounts.md
+  - name: Lös passerat betalningsdatum
+    href: billing-azure-subscription-past-due-balance.md
+  - name: Logga in med Office 365-konto
+    href: billing-use-existing-office-365-account-azure-subscription.md
+  - name: Registrera dig för Office 365 med ett Azure-konto
+    href: billing-use-existing-azure-account-for-office-365-subscription.md
 - name: Hantera prenumeration
   items:
-    - name: Återaktivera prenumeration
-      href: billing-subscription-become-disable.md
-    - name: Överför ägarskap
-      href: billing-subscription-transfer.md
-    - name: Avbryt prenumerationen
-      href: billing-how-to-cancel-azure-subscription.md
-    - name: Ändra kreditkort
-      href: billing-how-to-change-credit-card.md
-    - name: Ändra administratör
-      href: billing-add-change-azure-subscription-administrator.md
-    - name: Byt prenumerationserbjudande
-      href: billing-how-to-switch-azure-offer.md
-    - name: Betala med faktura
-      href: billing-how-to-pay-by-invoice.md
-    - name: Skapa hanteringsgrupper
-      href: ../azure-resource-manager/management-groups-create.md?toc=/azure/billing/TOC.json
-    - name: Flytta Azure-resurser
-      href: ../azure-resource-manager/resource-group-move-resources.md?toc=/azure/billing/TOC.json
-    - name: Skapa Enterprise prenumerationer
-      href: ../azure-resource-manager/programmatically-create-subscription.md?toc=/azure/billing/TOC.json
-    - name: Exportera prenumerationsinformation
-      href: billing-export-subscriptions.md
-    - name: Länka Azure AD-klient
-      href: ../active-directory/active-directory-how-subscriptions-associated-directory.md?toc=/azure/billing/TOC.json
-    - name: Begränsningar och kvoter
-      href: ../azure-subscription-service-limits.md?toc=/azure/billing/TOC.json
+  - name: Återaktivera prenumeration
+    href: billing-subscription-become-disable.md
+  - name: Överför ägarskap
+    href: billing-subscription-transfer.md
+  - name: Avbryt prenumerationen
+    href: billing-how-to-cancel-azure-subscription.md
+  - name: Ändra kreditkort
+    href: billing-how-to-change-credit-card.md
+  - name: Ändra administratör
+    href: billing-add-change-azure-subscription-administrator.md
+  - name: Byt prenumerationserbjudande
+    href: billing-how-to-switch-azure-offer.md
+  - name: Betala med faktura
+    href: billing-how-to-pay-by-invoice.md
+  - name: Skapa hanteringsgrupper
+    href: ../azure-resource-manager/management-groups-create.md?toc=/azure/billing/TOC.json
+  - name: Flytta Azure-resurser
+    href: ../azure-resource-manager/resource-group-move-resources.md?toc=/azure/billing/TOC.json
+  - name: Skapa Enterprise prenumerationer
+    href: ../azure-resource-manager/programmatically-create-subscription.md?toc=/azure/billing/TOC.json
+  - name: Exportera prenumerationsinformation
+    href: billing-export-subscriptions.md
+  - name: Länka Azure AD-klient
+    href: ../active-directory/active-directory-how-subscriptions-associated-directory.md?toc=/azure/billing/TOC.json
+  - name: Begränsningar och kvoter
+    href: ../azure-subscription-service-limits.md?toc=/azure/billing/TOC.json
 - name: Felsöka
   items:
-    - name: Inga prenumerationer hittades
-      href: billing-no-subscriptions-found.md
-    - name: Nekat kort
-      href: 'https://support.microsoft.com/en-us/help/4042960'
-    - name: Inloggningsproblem
-      href: 'https://support.microsoft.com/en-us/help/4042959'
-    - name: Inloggningsproblem
-      href: 'https://support.microsoft.com/en-us/help/4042961'
-    - name: Företagskostnadsvy inaktiverad
-      href: billing-enterprise-mgmt-grp-troubleshoot-cost-view.md
-    - name: Kontakta supporten
-      href: ../azure-supportability/how-to-create-azure-support-request.md
+  - name: Inga prenumerationer hittades
+    href: billing-no-subscriptions-found.md
+  - name: Nekat kort
+    href: https://support.microsoft.com/en-us/help/4042960
+  - name: Inloggningsproblem
+    href: https://support.microsoft.com/en-us/help/4042959
+  - name: Inloggningsproblem
+    href: https://support.microsoft.com/en-us/help/4042961
+  - name: Företagskostnadsvy inaktiverad
+    href: billing-enterprise-mgmt-grp-troubleshoot-cost-view.md
+  - name: Kontakta supporten
+    href: ../azure-supportability/how-to-create-azure-support-request.md
 - name: Exempel
   items:
-    - name: REST-API
-      items:
-        - name: Granska Enterprise-kostnader
-          href: billing-review-enterprise-billing.md
-        - name: Granska prenumerationsanvändning
-          href: billing-review-subscription-billing.md
-    - name: .NET-exempel
-      items:
-        - name: Kodexempel för API för faktura
-          href: 'https://github.com/Azure-Samples/billing-dotnet-core-invoice-download'
-        - name: Kodexempel för API för användning
-          href: 'https://github.com/Azure-Samples/billing-dotnet-usage-api'
-        - name: Kodexempel för API för RateCard
-          href: 'https://github.com/Azure-Samples/billing-dotnet-ratecard-api'
+  - name: REST-API
+    items:
+    - name: Granska Enterprise-kostnader
+      href: billing-review-enterprise-billing.md
+    - name: Granska prenumerationsanvändning
+      href: billing-review-subscription-billing.md
+    - name: Granska resursanvändning
+      href: billing-review-service-usage-api.md
+  - name: .NET-exempel
+    items:
+    - name: Kodexempel för API för faktura
+      href: https://github.com/Azure-Samples/billing-dotnet-core-invoice-download
+    - name: Kodexempel för API för användning
+      href: https://github.com/Azure-Samples/billing-dotnet-usage-api
+    - name: Kodexempel för API för RateCard
+      href: https://github.com/Azure-Samples/billing-dotnet-ratecard-api
 - name: Referens
   items:
-    - name: Scenarier för automatisering av fakturering
-      href: billing-cost-management-automation-scenarios.md
-      items:
-        - name: Hantera kostnader med Azure Budgets
-          href: billing-cost-management-budget-scenario.md
-    - name: Översikt över API för Azure-fakturering
-      href: billing-usage-rate-card-overview.md
-      items:
-        - name: REST API för Azure-fakturering
-          href: 'https://docs.microsoft.com/rest/api/billing'
-        - name: Partnerlösning – Cloud Cruiser
-          href: billing-usage-rate-card-partner-solution-cloudcruiser.md
-    - name: Översikt över API för Azure Consumption
-      href: billing-consumption-api-overview.md
-      items:
-        - name: REST API för Azure Consumption
-          href: 'https://docs.microsoft.com/rest/api/consumption'
-        - name: REST API för RateCard
-          href: 'https://msdn.microsoft.com/library/azure/mt219005.aspx'
-        - name: REST API för användning
-          href: 'https://msdn.microsoft.com/library/azure/mt219003.aspx'
-    - name: Översikt över Enterprise Reporting
-      href: billing-enterprise-api.md
-      items:
-        - name: REST API för Enterprise Reporting
-          href: 'https://docs.microsoft.com/rest/api/billing/enterprise/billing-enterprise-api-balance-summary'
+  - name: Scenarier för automatisering av fakturering
+    href: billing-cost-management-automation-scenarios.md
+    items:
+    - name: Hantera kostnader med Azure Budgets
+      href: billing-cost-management-budget-scenario.md
+  - name: Översikt över API för Azure-fakturering
+    href: billing-usage-rate-card-overview.md
+    items:
+    - name: REST API för Azure-fakturering
+      href: https://docs.microsoft.com/rest/api/billing
+    - name: Partnerlösning – Cloud Cruiser
+      href: billing-usage-rate-card-partner-solution-cloudcruiser.md
+  - name: Översikt över API för Azure Consumption
+    href: billing-consumption-api-overview.md
+    items:
+    - name: REST API för Azure Consumption
+      href: https://docs.microsoft.com/rest/api/consumption
+    - name: REST API för RateCard
+      href: https://msdn.microsoft.com/library/azure/mt219005.aspx
+    - name: REST API för användning
+      href: https://msdn.microsoft.com/library/azure/mt219003.aspx
+  - name: Översikt över Enterprise Reporting
+    href: billing-enterprise-api.md
+    items:
+    - name: REST API för Enterprise Reporting
+      href: https://docs.microsoft.com/rest/api/billing/enterprise/billing-enterprise-api-balance-summary
+ms.openlocfilehash: 5d7d56325201cbf3c851a843ea4d4393dea4bb40
+ms.sourcegitcommit: 974c478174f14f8e4361a1af6656e9362a30f515
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/20/2018
+ms.locfileid: "41929408"
