--- a/articles/active-directory/user-help/toc.yml
+++ b/articles/active-directory/user-help/toc.yml
@@ -1,72 +1,77 @@
+items:
 - name: Dokumentation om användarhjälp
   href: index.md
 - name: Hjälp om tvåstegsverifiering
   items:
-    - name: Översikt
-      href: user-help-two-step-verification-overview.md
-    - name: Konfigurera mitt konto
-      href: multi-factor-authentication-end-user-first-time.md
-    - name: Hantera dina inställningar
-      href: multi-factor-authentication-end-user-manage-settings.md
-    - name: Få hjälp
-      href: multi-factor-authentication-end-user-troubleshoot.md
-    - name: Hantera lösenord för appar
-      href: multi-factor-authentication-end-user-app-passwords.md
-    - name: Logga in
-      href: user-help-sign-in.md?toc=./toc.json
+  - name: Översikt
+    href: user-help-two-step-verification-overview.md
+  - name: Konfigurera mitt konto
+    href: multi-factor-authentication-end-user-first-time.md
+  - name: Hantera dina inställningar
+    href: multi-factor-authentication-end-user-manage-settings.md
+  - name: Få hjälp
+    href: multi-factor-authentication-end-user-troubleshoot.md
+  - name: Hantera lösenord för appar
+    href: multi-factor-authentication-end-user-app-passwords.md
+  - name: Logga in
+    href: user-help-sign-in.md?toc=./toc.json
 - name: Hjälp om återställning av lösenord
   items:
-    - name: Översikt
-      href: user-help-password-reset-overview.md
-    - name: Registrera dig för återställning av lösenord
-      href: active-directory-passwords-reset-register.md
-    - name: Återställa lösenordet
-      href: user-help-reset-password.md
+  - name: Översikt
+    href: user-help-password-reset-overview.md
+  - name: Registrera dig för återställning av lösenord
+    href: active-directory-passwords-reset-register.md
+  - name: Återställa lösenordet
+    href: user-help-reset-password.md
 - name: Hjälp om säkerhetsinformation (förhandsversion)
   items:
-    - name: Översikt
-      href: user-help-security-info-overview.md
-    - name: Konfigurera en autentiseringsapp
-      href: security-info-setup-auth-app.md
-    - name: Konfigurera textmeddelanden
-      href: security-info-setup-text-msg.md
-    - name: Konfigurera telefonsamtal
-      href: security-info-setup-phone-number.md
-    - name: Konfigurera e-post
-      href: security-info-setup-email.md
-    - name: Konfigurera säkerhetsfrågor
-      href: security-info-setup-questions.md
-    - name: Hantera lösenord för appar
-      href: security-info-app-passwords.md
-    - name: Hantera säkerhetsinformation
-      href: security-info-manage-settings.md
-    - name: Logga in
-      href: user-help-sign-in.md?toc=./toc.json
+  - name: Översikt
+    href: user-help-security-info-overview.md
+  - name: Konfigurera en autentiseringsapp
+    href: security-info-setup-auth-app.md
+  - name: Konfigurera textmeddelanden
+    href: security-info-setup-text-msg.md
+  - name: Konfigurera telefonsamtal
+    href: security-info-setup-phone-number.md
+  - name: Konfigurera e-post
+    href: security-info-setup-email.md
+  - name: Konfigurera säkerhetsfrågor
+    href: security-info-setup-questions.md
+  - name: Hantera lösenord för appar
+    href: security-info-app-passwords.md
+  - name: Hantera säkerhetsinformation
+    href: security-info-manage-settings.md
+  - name: Logga in
+    href: user-help-sign-in.md?toc=./toc.json
 - name: Hjälp om Microsoft Authenticator-appen
   items:
-    - name: Översikt
-      href: user-help-auth-app-overview.md
-    - name: Kom igång
-      href: microsoft-authenticator-app-how-to.md
-    - name: 'Logga in med telefonen, inte med ditt lösenord'
-      href: microsoft-authenticator-app-phone-signin-faq.md
-    - name: Säkerhetskopiering och återställning
-      href: microsoft-authenticator-app-backup-and-recovery.md
-    - name: VANLIGA FRÅGOR OCH SVAR
-      href: microsoft-authenticator-app-faq.md
+  - name: Översikt
+    href: user-help-auth-app-overview.md
+  - name: Kom igång
+    href: microsoft-authenticator-app-how-to.md
+  - name: Säkerhetskopiering och återställning
+    href: microsoft-authenticator-app-backup-and-recovery.md
+  - name: VANLIGA FRÅGOR OCH SVAR
+    href: microsoft-authenticator-app-faq.md
 - name: Hjälp om portalen Mina appar
   items:
-    - name: Översikt
-      href: user-help-my-apps-overview.md
-    - name: Vad är portalen Mina appar?
-      href: active-directory-saas-access-panel-introduction.md
-    - name: Felsöka problem
-      href: active-directory-saas-access-panel-user-help.md
+  - name: Översikt
+    href: user-help-my-apps-overview.md
+  - name: Vad är portalen Mina appar?
+    href: active-directory-saas-access-panel-introduction.md
+  - name: Felsöka problem
+    href: active-directory-saas-access-panel-user-help.md
 - name: Hjälp om att hantera enheter
   items:
-    - name: Översikt
-      href: user-help-device-mgmt-overview.md
-    - name: Ansluta dina enheter
-      href: device-management-azuread-joined-devices-setup.md
-    - name: Registrera dina Windows 10-enheter
-      href: device-management-azuread-registered-devices-windows10-setup.md
+  - name: Översikt
+    href: user-help-device-mgmt-overview.md
+  - name: Ansluta din arbetsenhet
+    href: user-help-join-device-on-network.md
+  - name: Registrera din personliga arbetsenhet
+    href: user-help-register-device-on-network.md
+ms.openlocfilehash: 48a980e7b3d9b8a3faa7917ae1f41c7f0cc6d9bc
+ms.sourcegitcommit: 974c478174f14f8e4361a1af6656e9362a30f515
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/20/2018
+ms.locfileid: "41929409"
