--- a/articles/ansible/toc.yml
+++ b/articles/ansible/toc.yml
@@ -1,56 +1,63 @@
+items:
 - name: Ansible i Azure
   href: ./index.yml
 - name: Översikt
   items:
-    - name: Om Ansible i Azure
-      href: ./ansible-overview.md
+  - name: Om Ansible i Azure
+    href: ./ansible-overview.md
 - name: Snabbstarter
-  expanded: true
   items:
-    - name: Installera och konfigurera Ansible
-      href: /azure/virtual-machines/linux/ansible-install-configure
-      maintainContext: true
-    - name: Skapa en virtuell Linux-dator
-      href: /azure/virtual-machines/linux/ansible-create-vm
-      maintainContext: true
+  - name: Installera Ansible på en virtuell Linux-dator
+    href: /azure/virtual-machines/linux/ansible-install-configure
+    maintainContext: true
+  - name: Skapa en virtuell Linux-dator
+    href: /azure/virtual-machines/linux/ansible-create-vm
+    maintainContext: true
+  - name: Hantera en virtuell Linux-dator
+    href: /azure/virtual-machines/linux/ansible-manage-linux-vm
+    maintainContext: true
+  expanded: true
 - name: Självstudier
   items:
-    - name: Skapa en fullständig virtuell Linux-dator
-      href: /azure/virtual-machines/linux/ansible-create-complete-vm
-      maintainContext: true
-    - name: Kör en spelbok i Cloud Shell
-      href: ./ansible-run-playbook-in-cloudshell.md
-      maintainContext: true
-    - name: Hantera dynamiska lager
-      href: ./ansible-manage-azure-dynamic-inventories.md
-      maintainContext: true
-    - name: Skapa och konfigurera VMSS
-      href: ./ansible-create-configure-vmss.md
-    - name: Distribuera app till VMSS
-      href: ./ansible-deploy-app-vmss.md
-    - name: Skapa och konfigurera AKS-kluster
-      href: ./ansible-create-configure-aks.md
+  - name: Kör en spelbok i Cloud Shell
+    href: ./ansible-run-playbook-in-cloudshell.md
+    maintainContext: true
+  - name: Hantera dynamiska lager
+    href: ./ansible-manage-azure-dynamic-inventories.md
+    maintainContext: true
+  - name: Skapa och konfigurera VMSS
+    href: ./ansible-create-configure-vmss.md
+  - name: Distribuera app till VMSS
+    href: ./ansible-deploy-app-vmss.md
+  - name: Skapa och konfigurera AKS-kluster
+    href: ./ansible-create-configure-aks.md
 - name: Referens
   items:
-    - name: Spelboksroller
-      items:
-        - name: azure_module
-          href: 'https://galaxy.ansible.com/Azure/azure_modules/'
-        - name: azure_preview_module
-          href: 'https://galaxy.ansible.com/Azure/azure_preview_modules'
-    - name: Versioner och funktioner
-      href: ./ansible-matrix.md
-    - name: Azure Container Instances
-      href: 'http://docs.ansible.com/ansible/latest/azure_rm_containerinstance_module.html'
-    - name: Azure Functions
-      href: 'http://docs.ansible.com/ansible/latest/azure_rm_functionapp_module.html'
-    - name: Belastningsutjämnare
-      href: 'http://docs.ansible.com/ansible/latest/azure_rm_loadbalancer_module.html'
-    - name: Virtuella datorer
-      href: 'http://docs.ansible.com/ansible/latest/azure_rm_virtualmachine_module.html'
-    - name: Alla moduler för Azure
-      href: 'http://docs.ansible.com/ansible/latest/list_of_cloud_modules.html#azure'
+  - name: Spelboksroller
+    items:
+    - name: azure_module
+      href: https://galaxy.ansible.com/Azure/azure_modules/
+    - name: azure_preview_module
+      href: https://galaxy.ansible.com/Azure/azure_preview_modules
+  - name: Versioner och funktioner
+    href: ./ansible-matrix.md
+  - name: Azure Container Instances
+    href: http://docs.ansible.com/ansible/latest/azure_rm_containerinstance_module.html
+  - name: Azure Functions
+    href: http://docs.ansible.com/ansible/latest/azure_rm_functionapp_module.html
+  - name: Lastbalanserare
+    href: http://docs.ansible.com/ansible/latest/azure_rm_loadbalancer_module.html
+  - name: Virtuella datorer
+    href: http://docs.ansible.com/ansible/latest/azure_rm_virtualmachine_module.html
+  - name: Alla moduler för Azure
+    href: http://docs.ansible.com/ansible/latest/list_of_cloud_modules.html#azure
 - name: Verktyg
   items:
-    - name: Visual Studio Code-tillägg för Ansible
-      href: 'https://marketplace.visualstudio.com/items?itemName=vscoss.vscode-ansible'
+  - name: Visual Studio Code-tillägg för Ansible
+    href: https://marketplace.visualstudio.com/items?itemName=vscoss.vscode-ansible
+ms.openlocfilehash: 8f803114e966a3b544e4a4788752be8c494ad33a
+ms.sourcegitcommit: 76797c962fa04d8af9a7b9153eaa042cf74b2699
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/21/2018
+ms.locfileid: "41928424"
