--- a/articles/azure-functions/index.yml
+++ b/articles/azure-functions/index.yml
@@ -1,4 +1,10 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: c28879b840a5952501339b73c7741b28a1116c5c
+ms.sourcegitcommit: 4ea0cea46d8b607acd7d128e1fd4a23454aa43ee
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/14/2018
+ms.locfileid: "41927694"
 documentType: LandingData
 title: Azure Functions-dokumentation
 metadata:
@@ -12,14 +18,8 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 01-23-2017
+  ms.date: 08/09/2018
   ms.author: carolz
-  ms.openlocfilehash: 02d6d65653c7fa77c3f1cb2be0e59caf74ca79f1
-  ms.sourcegitcommit: d2bf34f0f2e603ff7491a8614f0d3da3cca64374
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 06/26/2018
-  ms.locfileid: "36963844"
 abstract:
   description: Azure Functions är en beräkningstjänst <a href="https://azure.microsoft.com/overview/serverless-computing/">utan server</a> som gör det möjligt att köra kod på begäran utan att behöva installera eller hantera infrastruktur. Använd Azure Functions för att köra ett skript eller kod som svar på en rad olika händelser. Lär dig hur du använder Azure Functions med våra snabbstarter, självstudier och exempel.
   aside:
@@ -91,6 +91,7 @@ sections:
     className: spaced noBullet
     items:
     - html: <a href="/azure/azure-functions/functions-cli-samples">Azure CLI</a>
+    - html: <a href="/sandbox/functions-recipes/">Azure Functions-recept</a>
 - title: Referens
   items:
   - type: list
