--- a/articles/batch/TOC.yml
+++ b/articles/batch/TOC.yml
@@ -1,197 +1,222 @@
+items:
 - name: Dokumentation om Batch
   href: index.yml
 - name: Översikt
   items:
-    - name: Vad är Azure Batch?
-      href: batch-technical-overview.md
+  - name: Vad är Azure Batch?
+    href: batch-technical-overview.md
 - name: Snabbstarter
-  expanded: true
   items:
-    - name: Köra ett Batch-jobb – CLI
-      href: quick-create-cli.md
-    - name: Köra ett Batch-jobb – Portal
-      href: quick-create-portal.md
-    - name: Köra ett Batch-jobb – .NET
-      href: quick-run-dotnet.md
-    - name: Köra ett Batch-jobb – Python
-      href: quick-run-python.md
+  - name: Köra ett Batch-jobb – CLI
+    href: quick-create-cli.md
+  - name: Köra ett Batch-jobb – Portal
+    href: quick-create-portal.md
+  - name: Köra ett Batch-jobb – .NET
+    href: quick-run-dotnet.md
+  - name: Köra ett Batch-jobb – Python
+    href: quick-run-python.md
+  expanded: true
 - name: Självstudier
   items:
-    - name: Parallell filbearbetning – .NET
-      href: tutorial-parallel-dotnet.md
-    - name: Parallell filbearbetning – Python
-      href: tutorial-parallel-python.md
-    - name: Scenrendering med Arnold
-      href: tutorial-rendering-cli.md
-    - name: Parallell R-simulering
-      href: tutorial-r-doazureparallel.md
+  - name: Parallell filbearbetning – .NET
+    href: tutorial-parallel-dotnet.md
+  - name: Parallell filbearbetning – Python
+    href: tutorial-parallel-python.md
+  - name: Scenrendering med Arnold
+    href: tutorial-rendering-cli.md
+  - name: Rendering med hjälp av Batch Explorer
+    href: tutorial-rendering-batchexplorer-blender.md
+  - name: Parallell R-simulering
+    href: tutorial-r-doazureparallel.md
 - name: Exempel
   items:
-    - name: Kodexempel
-      items:
-        - name: Azure-kodexempel
-          href: 'https://azure.microsoft.com/resources/samples/?service=batch'
-        - name: Lagringsplats för Batch-exempel
-          href: 'https://github.com/Azure/azure-batch-samples'
-    - name: Azure CLI
-      href: cli-samples.md
+  - name: Kodexempel
+    items:
+    - name: Azure-kodexempel
+      href: https://azure.microsoft.com/resources/samples/?service=batch
+    - name: Lagringsplats för Batch-exempel
+      href: https://github.com/Azure/azure-batch-samples
+  - name: Azure CLI
+    href: cli-samples.md
 - name: Begrepp
   items:
-    - name: Utvecklarfunktioner
-      href: batch-api-basics.md
-    - name: 'API:er och verktyg'
-      href: batch-apis-tools.md
-    - name: Kvoter och begränsningar
-      href: batch-quota-limit.md
-    - name: VM-storlekar som stöds
-      href: batch-pool-vm-sizes.md
+  - name: Utvecklarfunktioner
+    href: batch-api-basics.md
+  - name: API:er och verktyg
+    href: batch-apis-tools.md
+  - name: Kvoter och begränsningar
+    href: batch-quota-limit.md
+  - name: VM-storlekar som stöds
+    href: batch-pool-vm-sizes.md
 - name: Instruktionsguider
   items:
-    - name: Hantera Batch-konton
+  - name: Hantera Batch-konton
+    items:
+    - name: Hantera Batch-konton med portalen
+      href: batch-account-create-portal.md
+    - name: Hantera Batch-konton med Batch Management .NET
+      href: batch-management-dotnet.md
+  - name: Autentisera med Azure AD
+    items:
+    - name: Azure AD med Batch-tjänsten
+      href: batch-aad-auth.md
+    - name: Azure AD med Batch Management
+      href: batch-aad-auth-management.md
+  - name: Skapa programpaket
+    href: batch-application-packages.md
+  - name: Skapa och hantera pooler
+    items:
+    - name: Automatisk skalning för beräkningsnoder
+      href: batch-automatic-scaling.md
+    - name: Välja en VM-storlek för beräkningsnoder
+      href: batch-pool-vm-sizes.md
+    - name: Konfigurera åtkomst till beräkningsnoder
+      href: pool-endpoint-configuration.md
+    - name: Skapa en pool med en anpassad bild
+      href: batch-custom-images.md
+    - name: Skapa en pool i ett virtuellt nätverk
+      href: batch-virtual-network.md
+    - name: Montera en Azure-filresurs
+      href: pool-file-shares.md
+    - name: Använda beräkningsintensiva virtuella datorer
+      href: batch-pool-compute-intensive-sizes.md
+    - name: Använda Linux-beräkningsnoder
+      href: batch-linux-nodes.md
+    - name: Använda lågprioriterade virtuella datorer
+      href: batch-low-pri-vms.md
+  - name: Hantera jobb och uppgifter
+    items:
+    - name: Aktiviteter för jobbförberedelse och -slutförande
+      href: batch-job-prep-release.md
+    - name: Samtidiga nodaktiviteter
+      href: batch-parallel-node-tasks.md
+    - name: Aktivitetsberoenden
+      href: batch-task-dependencies.md
+    - name: Användarkonton för att köra aktiviteter
+      href: batch-user-accounts.md
+  - name: Bevara jobb- och uppgiftsutdata
+    href: batch-task-output.md
+    items:
+    - name: Spara utdata med Batch-API
+      href: batch-task-output-files.md
+    - name: Spara utdata med File Conventions-bibliotek
+      href: batch-task-output-file-conventions.md
+  - name: Övervaka Batch-lösningar
+    href: monitoring-overview.md
+    items:
+    - name: Använd mått och diagnostikloggar
+      href: batch-diagnostics.md
+    - name: Övervaka med Application Insights
+      href: monitor-application-insights.md
+    - name: Räkna resurser efter tillstånd
+      href: batch-get-resource-counts.md
+    - name: Fråga resurser effektivt
+      href: batch-efficient-list-queries.md
+  - name: Använd skriptverktyg
+    items:
+    - name: Använda Azure PowerShell
+      href: batch-powershell-cmdlets-get-started.md
+    - name: Använda Azure CLI
+      href: batch-cli-get-started.md
       items:
-        - name: Hantera Batch-konton med portalen
-          href: batch-account-create-portal.md
-        - name: Hantera Batch-konton med Batch Management .NET
-          href: batch-management-dotnet.md
-    - name: Autentisera med Azure AD
-      items:
-        - name: Azure AD med Batch-tjänsten
-          href: batch-aad-auth.md
-        - name: Azure AD med Batch Management
-          href: batch-aad-auth-management.md
-    - name: Skapa programpaket
-      href: batch-application-packages.md
-    - name: Skapa och hantera pooler
-      items:
-        - name: Automatisk skalning för beräkningsnoder
-          href: batch-automatic-scaling.md
-        - name: Välja en VM-storlek för beräkningsnoder
-          href: batch-pool-vm-sizes.md
-        - name: Konfigurera åtkomst till beräkningsnoder
-          href: pool-endpoint-configuration.md
-        - name: Skapa en pool med en anpassad bild
-          href: batch-custom-images.md
-        - name: Skapa en pool i ett virtuellt nätverk
-          href: batch-virtual-network.md
-        - name: Montera en Azure-filresurs
-          href: pool-file-shares.md
-        - name: Använda beräkningsintensiva virtuella datorer
-          href: batch-pool-compute-intensive-sizes.md
-        - name: Använda Linux-beräkningsnoder
-          href: batch-linux-nodes.md
-        - name: Använda lågprioriterade virtuella datorer
-          href: batch-low-pri-vms.md
-    - name: Hantera jobb och uppgifter
-      items:
-        - name: Aktiviteter för jobbförberedelse och -slutförande
-          href: batch-job-prep-release.md
-        - name: Samtidiga nodaktiviteter
-          href: batch-parallel-node-tasks.md
-        - name: Aktivitetsberoenden
-          href: batch-task-dependencies.md
-        - name: Användarkonton för att köra aktiviteter
-          href: batch-user-accounts.md
-    - name: Bevara jobb- och uppgiftsutdata
-      href: batch-task-output.md
-      items:
-        - name: Spara utdata med Batch-API
-          href: batch-task-output-files.md
-        - name: Spara utdata med File Conventions-bibliotek
-          href: batch-task-output-file-conventions.md
-    - name: Köra arbetsbelastningar
-      items:
-        - name: MPI-jobb
-          href: batch-mpi.md
-        - name: Containerarbetsbelastningar
-          href: batch-docker-container-workloads.md
-        - name: Rendering
-          href: batch-rendering-service.md
-        - name: Databearbetning med Batch och Data Factory
-          href: ../data-factory/transform-data-using-dotnet-custom-activity.md?toc=%2fazure%2fbatch%2ftoc.json
-    - name: Övervaka Batch-lösningar
-      href: monitoring-overview.md
-      items:
-        - name: Använd mått och diagnostikloggar
-          href: batch-diagnostics.md
-        - name: Övervaka med Application Insights
-          href: monitor-application-insights.md
-        - name: Räkna resurser efter tillstånd
-          href: batch-get-resource-counts.md
-        - name: Fråga resurser effektivt
-          href: batch-efficient-list-queries.md
-    - name: Använd skriptverktyg
-      items:
-        - name: Använda Azure PowerShell
-          href: batch-powershell-cmdlets-get-started.md
-        - name: Använda Azure CLI
-          href: batch-cli-get-started.md
-          items:
-            - name: Använda Batch CLI-mallar
-              href: batch-cli-templates.md
-    - name: Använd Batch Node.js SDK
-      href: batch-nodejs-get-started.md
+      - name: Använda Batch CLI-mallar
+        href: batch-cli-templates.md
+  - name: Använd Batch Node.js SDK
+    href: batch-nodejs-get-started.md
+- name: Köra arbetsbelastningar
+  items:
+  - name: MPI-jobb
+    href: batch-mpi.md
+  - name: Containerarbetsbelastningar
+    href: batch-docker-container-workloads.md
+  - name: Rendering
+    items:
+    - name: Rendering med hjälp av Azure
+      href: batch-rendering-service.md
+    - name: Rendering av VM-avbildningar
+      href: batch-rendering-applications.md
+    - name: Batchrenderingsfunktioner
+      href: batch-rendering-functionality.md
+    - name: Använda batchrendering
+      href: batch-rendering-using.md
+    - name: Använda renderingshanterare
+      href: batch-rendering-render-managers.md
+    - name: Renderingsprogramreferens
+      href: batch-rendering-application-reference.md
+    - name: Lagring och dataflytt
+      href: batch-rendering-storage-data-movement.md
+    - name: Renderingsarkitekturer
+      href: batch-rendering-architectures.md
+  - name: Databearbetning med Batch och Data Factory
+    href: ../data-factory/transform-data-using-dotnet-custom-activity.md?toc=%2fazure%2fbatch%2ftoc.json
 - name: Referens
   items:
-    - name: Azure CLI
-      href: /cli/azure/batch
-    - name: Azure PowerShell
-      href: /powershell/module/azurerm.batch
-    - name: .NET
-      href: /dotnet/api/overview/azure/batch
-    - name: Java
-      href: /java/api/overview/azure/batch
-    - name: Node.js
-      href: /javascript/api/overview/azure/batch
-    - name: Python
-      href: /python/api/overview/azure/batch
-    - name: REST
-      items:
-        - name: Batch-tjänst
-          href: /rest/api/batchservice
-        - name: Batch Management
-          href: /rest/api/batchmanagement/
-    - name: Batchanalys
-      href: batch-analytics.md
-      items:
-        - name: Händelse för skapande av pool
-          href: batch-pool-create-event.md
-        - name: Starthändelse för borttagning av pool
-          href: batch-pool-delete-start-event.md
-        - name: Sluthändelse för borttagning av pool
-          href: batch-pool-delete-complete-event.md
-        - name: Starthändelse för storleksändring av pool
-          href: batch-pool-resize-start-event.md
-        - name: Sluthändelse för storleksändring av pool
-          href: batch-pool-resize-complete-event.md
-        - name: Starthändelse för uppgift
-          href: batch-task-start-event.md
-        - name: Sluthändelse för uppgift
-          href: batch-task-complete-event.md
-        - name: Händelse för misslyckad uppgift
-          href: batch-task-fail-event.md
-    - name: Miljövariabler för Batch-beräkningsnod
-      href: batch-compute-node-environment-variables.md
+  - name: Azure CLI
+    href: /cli/azure/batch
+  - name: Azure PowerShell
+    href: /powershell/module/azurerm.batch
+  - name: .NET
+    href: /dotnet/api/overview/azure/batch
+  - name: Java
+    href: /java/api/overview/azure/batch
+  - name: Node.js
+    href: /javascript/api/overview/azure/batch
+  - name: Python
+    href: /python/api/overview/azure/batch
+  - name: REST
+    items:
+    - name: Batch-tjänst
+      href: /rest/api/batchservice
+    - name: Batch Management
+      href: /rest/api/batchmanagement/
+  - name: Batchanalys
+    href: batch-analytics.md
+    items:
+    - name: Händelse för skapande av pool
+      href: batch-pool-create-event.md
+    - name: Starthändelse för borttagning av pool
+      href: batch-pool-delete-start-event.md
+    - name: Sluthändelse för borttagning av pool
+      href: batch-pool-delete-complete-event.md
+    - name: Starthändelse för storleksändring av pool
+      href: batch-pool-resize-start-event.md
+    - name: Sluthändelse för storleksändring av pool
+      href: batch-pool-resize-complete-event.md
+    - name: Starthändelse för uppgift
+      href: batch-task-start-event.md
+    - name: Sluthändelse för uppgift
+      href: batch-task-complete-event.md
+    - name: Händelse för misslyckad uppgift
+      href: batch-task-fail-event.md
+  - name: Miljövariabler för Batch-beräkningsnod
+    href: batch-compute-node-environment-variables.md
 - name: Resurser
   items:
-    - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/'
-    - name: Batch Community
-      href: 'https://github.com/Azure/Batch'
-    - name: Batch Shipyard
-      href: 'https://github.com/Azure/batch-shipyard'
-    - name: Blogg
-      href: 'https://blogs.technet.microsoft.com/windowshpc/'
-    - name: HPC-lösningar i Azure
-      href: ../virtual-machines/linux/high-performance-computing.md?toc=%2fazure%2fbatch%2ftoc.json
-    - name: Prissättning
-      href: 'https://azure.microsoft.com/pricing/details/batch/'
-    - name: Priskalkylator
-      href: 'https://azure.microsoft.com/pricing/calculator/'
-    - name: Resource Manager-mall
-      href: /azure/templates/microsoft.batch/batchaccounts
-    - name: Tjänstuppdateringar
-      href: 'https://azure.microsoft.com/updates/?product=batch&updatetype=&platform='
-    - name: Stack Overflow
-      href: 'http://stackoverflow.com/questions/tagged/azure-batch'
-    - name: Videoklipp
-      href: 'https://azure.microsoft.com/documentation/videos/index/?services=batch'
+  - name: Azure-översikt
+    href: https://azure.microsoft.com/roadmap/
+  - name: Batch Community
+    href: https://github.com/Azure/Batch
+  - name: Batch Shipyard
+    href: https://github.com/Azure/batch-shipyard
+  - name: Blogg
+    href: https://blogs.technet.microsoft.com/windowshpc/
+  - name: HPC-lösningar i Azure
+    href: ../virtual-machines/linux/high-performance-computing.md?toc=%2fazure%2fbatch%2ftoc.json
+  - name: Prissättning
+    href: https://azure.microsoft.com/pricing/details/batch/
+  - name: Priskalkylator
+    href: https://azure.microsoft.com/pricing/calculator/
+  - name: Resource Manager-mall
+    href: /azure/templates/microsoft.batch/batchaccounts
+  - name: Tjänstuppdateringar
+    href: https://azure.microsoft.com/updates/?product=batch&updatetype=&platform=
+  - name: Stack Overflow
+    href: http://stackoverflow.com/questions/tagged/azure-batch
+  - name: Videoklipp
+    href: https://azure.microsoft.com/documentation/videos/index/?services=batch
+ms.openlocfilehash: 601c20003bfba8611f60c22dac4e357a092fe77a
+ms.sourcegitcommit: 4ea0cea46d8b607acd7d128e1fd4a23454aa43ee
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/14/2018
+ms.locfileid: "41928064"
