--- a/articles/cognitive-services/Bing-Image-Search/toc.yml
+++ b/articles/cognitive-services/Bing-Image-Search/toc.yml
@@ -1,95 +1,112 @@
+items:
 - name: Dokumentation om bildsökning i Bing
   href: index.yml
 - name: Översikt
   items:
-    - name: Vad är bildsökning i Bing?
-      href: overview.md
-- name: Snabbstarter för REST API
-  expanded: true
+  - name: Vad är bildsökning i Bing?
+    href: overview.md
+- name: Snabbstarter
   items:
-    - name: 'C#'
+  - name: Skicka sökfrågor med hjälp av REST API
+    items:
+    - name: Använd C#
       href: quickstarts/csharp.md
-    - name: Java
+    - name: Använda Java
       href: quickstarts/java.md
-    - name: Node.js
+    - name: Använda Node.js
       href: quickstarts/nodejs.md
-    - name: PHP
+    - name: Använda PHP
       href: quickstarts/php.md
-    - name: Python
+    - name: Använda Python
       href: quickstarts/python.md
-    - name: Ruby
+    - name: Använda Ruby
       href: quickstarts/ruby.md
-- name: Snabbstarter för SDK
-  items:
-    - name: Översikt över SDK-exempel
-      href: sdk.md
-    - name: 'Snabbstart för SDK för bildsökning i C#'
+    expanded: true
+  - name: Begära och filtrera bilder med hjälp av SDK
+    items:
+    - name: Använd C#
       href: image-search-sdk-quickstart.md
-    - name: Snabbstart för SDK för bildsökning i Node.js
+    - name: Använda Node.js
       href: image-search-sdk-node-quickstart.md
-    - name: Snabbstart för SDK för bildsökning i Python
+    - name: Använda Python
       href: image-sdk-python-quickstart.md
-    - name: Snabbstart för SDK för bildsökning i Java
+    - name: Använda Java
       href: image-sdk-java-quickstart.md
 - name: Självstudier
   items:
-    - name: Enkelsidig webbapp
-      href: tutorial-bing-image-search-single-page-app.md
-    - name: Enkelsidig webbapp (källkod)
-      href: tutorial-bing-image-search-single-page-app-source.md
-    - name: Bilduppladdning i Bing för information
-      href: tutorial-image-post.md
-    - name: Bilduppladdning i Bing för information (källkod)
-      href: tutorial-image-post-source.md
+  - name: Enkelsidig webbapp
+    href: tutorial-bing-image-search-single-page-app.md
+  - name: Enkelsidig webbapp (källkod)
+    href: tutorial-bing-image-search-single-page-app-source.md
+  - name: Bilduppladdning i Bing för information
+    href: tutorial-image-post.md
+  - name: Bilduppladdning i Bing för information (källkod)
+    href: tutorial-image-post-source.md
 - name: Exempel
   items:
-    - name: Kodexempel
-      href: 'https://azure.microsoft.com/resources/samples/?sort=0&service=cognitive-services&term=Bing+Image+Search'
+  - name: Kodexempel
+    href: https://azure.microsoft.com/resources/samples/?sort=0&service=cognitive-services&term=Bing+Image+Search
 - name: Instruktionsguider
   items:
-    - name: Hämta information om bilder
-      href: image-insights.md
-    - name: Hämta .gif-bilder
-      href: gif-images.md
-    - name: Hämta populära bilder
-      href: trending-images.md
-    - name: Bläddra bland bilder
-      href: paging-images.md
-    - name: Ändra storlek på och beskär miniatyrer
-      href: resize-and-crop-thumbnails.md
-    - name: Uppgradera från v5 till v7
-      href: bing-image-upgrade-guide-v5-to-v7.md
+  - name: Hämta information om bilder
+    href: image-insights.md
+  - name: Hämta .gif-bilder
+    href: gif-images.md
+  - name: Hämta populära bilder
+    href: trending-images.md
+  - name: Bläddra bland bilder
+    href: paging-images.md
+  - name: Ändra storlek på och beskär miniatyrer
+    href: resize-and-crop-thumbnails.md
+  - name: Uppgradera från v5 till v7
+    href: bing-image-upgrade-guide-v5-to-v7.md
+- name: Begrepp
+  items:
+  - name: Hämta bilder från webben
+    href: concepts/bing-image-search-get-images.md
+  - name: Skicka och arbeta med sökfrågor
+    href: concepts/bing-image-search-sending-queries.md
 - name: Referens
   items:
-    - name: API för bildsökning i Bing v7
-      href: 'https://docs.microsoft.com/rest/api/cognitiveservices/bing-images-api-v7-reference'
-    - name: API för bildsökning i Bing v5
-      href: 'https://docs.microsoft.com/rest/api/cognitiveservices/bing-images-api-v5-reference'
+  - name: API för bildsökning i Bing v7
+    href: https://docs.microsoft.com/rest/api/cognitiveservices/bing-images-api-v7-reference
+  - name: API för bildsökning i Bing v5
+    href: https://docs.microsoft.com/rest/api/cognitiveservices/bing-images-api-v5-reference
+  - name: Azure Cognitive Services PowerShell-referens
+    href: https://aka.ms/azure-powershell-cognitiveservices
+  - name: Referens för Azure Cognitive Services-kommandoradsgränssnitt
+    href: https://docs.microsoft.com/cli/azure/cognitiveservices?view=azure-cli-latest#az_cognitiveservices_list
 - name: Resurser
   items:
-    - name: VANLIGA FRÅGOR OCH SVAR
-      href: bing-image-search-resource-faq.md
-    - name: Prissättning
-      href: 'https://azure.microsoft.com/pricing/details/cognitive-services/search-api/image/'
-    - name: UserVoice
-      href: 'https://cognitive.uservoice.com/forums/555907-bing-search'
-    - name: Stack Overflow
-      href: 'https://stackoverflow.com/questions/tagged/bing-search'
-    - name: Regional tillgänglighet
-      href: 'https://azure.microsoft.com/global-infrastructure/services/'
-    - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/'
-    - name: Kunskapsbas
-      href: 'https://cognitive.uservoice.com/knowledgebase/topics/127875-bing-search-web-image-video-news-autosuggest'
-    - name: Hämta API-nyckel
-      href: 'https://azure.microsoft.com/try/cognitive-services/?api=bing-image-search-api'
-    - name: Prova!
-      href: 'https://azure.microsoft.com/services/cognitive-services/bing-image-search-api/'
-    - name: Slutpunkter för bildsökning i Bing
-      href: image-search-endpoint.md
-    - name: Länder och marknader som stöds
-      href: supported-countries-markets.md
-    - name: Använda och visa krav
-      href: UseAndDisplayRequirements.md
-    - name: Analys för API för bildsökning i Bing
-      href: bing-image-stats.md
+  - name: VANLIGA FRÅGOR OCH SVAR
+    href: bing-image-search-resource-faq.md
+  - name: Prissättning
+    href: https://azure.microsoft.com/pricing/details/cognitive-services/search-api/image/
+  - name: UserVoice
+    href: https://cognitive.uservoice.com/forums/555907-bing-search
+  - name: Stack Overflow
+    href: https://stackoverflow.com/questions/tagged/bing-search
+  - name: Regional tillgänglighet
+    href: https://azure.microsoft.com/global-infrastructure/services/
+  - name: Azure-översikt
+    href: https://azure.microsoft.com/roadmap/
+  - name: Kunskapsbas
+    href: https://cognitive.uservoice.com/knowledgebase/topics/127875-bing-search-web-image-video-news-autosuggest
+  - name: Hämta API-nyckel
+    href: https://azure.microsoft.com/try/cognitive-services/?api=bing-image-search-api
+  - name: Prova!
+    href: https://azure.microsoft.com/services/cognitive-services/bing-image-search-api/
+  - name: Slutpunkter för bildsökning i Bing
+    href: image-search-endpoint.md
+  - name: Länder och marknader som stöds
+    href: supported-countries-markets.md
+  - name: Använda och visa krav
+    href: UseAndDisplayRequirements.md
+  - name: Analys för API för bildsökning i Bing
+    href: bing-image-stats.md
+ms.openlocfilehash: 02b54baef02d40373bb574d12575e2df739f1703
+ms.sourcegitcommit: a2ae233e20e670e2f9e6b75e83253bd301f5067c
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/13/2018
+ms.locfileid: "42440316"
