--- a/articles/cognitive-services/Custom-Vision-Service/toc.yml
+++ b/articles/cognitive-services/Custom-Vision-Service/toc.yml
@@ -1,71 +1,80 @@
+items:
 - name: Dokumentation om Custom Vision Service
 - name: Översikt
   items:
-    - name: Vad är Custom Vision Service?
-      href: home.md
+  - name: Vad är Custom Vision Service?
+    href: home.md
 - name: Instruktionsguider
   items:
-    - name: Börja använda Custom Vision Service
+  - name: Börja använda Custom Vision Service
+    items:
+    - name: Skapa en klassificerare
+      href: getting-started-build-a-classifier.md
+    - name: Testa din modell
+      href: test-your-model.md
+    - name: Förbättra din klassificerare
+      href: getting-started-improving-your-classifier.md
+    - name: Använd förutsägelse-API:t
+      href: use-prediction-api.md
+    - name: Exportera din modell till mobil
+      href: export-your-model.md
+    - name: Använda ONNX-modellen med Windows ML
+      href: custom-vision-onnx-windows-ml.md
+    - name: Köra TensorFlow-modellen i Python
+      href: export-model-python.md
+    - name: Träna en modell med hjälp av REST API
+      href: rest-api-tutorial.md
+  - name: Skapa appar
+    items:
+    - name: Bildklassificering
       items:
-        - name: Skapa en klassificerare
-          href: getting-started-build-a-classifier.md
-        - name: Testa din modell
-          href: test-your-model.md
-        - name: Förbättra din klassificerare
-          href: getting-started-improving-your-classifier.md
-        - name: 'Använd förutsägelse-API:t'
-          href: use-prediction-api.md
-        - name: Exportera din modell till mobil
-          href: export-your-model.md
-        - name: Använda ONNX-modellen med Windows ML
-          href: custom-vision-onnx-windows-ml.md
-        - name: Köra TensorFlow-modellen i Python
-          href: export-model-python.md
-    - name: Skapa appar
+      - name: C#-självstudie
+        href: csharp-tutorial.md
+      - name: Python-självstudie
+        href: python-tutorial.md
+    - name: Objektidentifiering
       items:
-        - name: Bildklassificering
-          items:
-            - name: 'C#-självstudie'
-              href: csharp-tutorial.md
-            - name: Python-självstudie
-              href: python-tutorial.md
-        - name: Objektidentifiering
-          items:
-            - name: 'C#-självstudie'
-              href: csharp-tutorial-od.md
-            - name: Python-självstudie
-              href: python-tutorial-od.md
+      - name: C#-självstudie
+        href: csharp-tutorial-od.md
+      - name: Python-självstudie
+        href: python-tutorial-od.md
 - name: Referens
   items:
-    - name: API för Custom Vision Training
-      href: 'https://go.microsoft.com/fwlink/?linkid=865446'
-    - name: API för Custom Vision Prediction
-      href: 'https://go.microsoft.com/fwlink/?linkid=865445'
-    - name: Ordlista
-      href: glossary-of-terms.md
-    - name: 'SDK:er'
-      items:
-        - name: Windows
-          href: 'http://github.com/Microsoft/Cognitive-CustomVision-Windows'
-        - name: Python
-          href: 'https://docs.microsoft.com/python/api/overview/azure/cognitive-services?view=azure-python#vision-modules'
-        - name: Go
-          href: 'https://github.com/Azure/azure-sdk-for-go/tree/master/services/cognitiveservices'
+  - name: API för Custom Vision Training
+    href: https://go.microsoft.com/fwlink/?linkid=865446
+  - name: API för Custom Vision Prediction
+    href: https://go.microsoft.com/fwlink/?linkid=865445
+  - name: Ordlista
+    href: glossary-of-terms.md
+  - name: SDK:er
+    items:
+    - name: Windows
+      href: http://github.com/Microsoft/Cognitive-CustomVision-Windows
+    - name: Python
+      href: https://docs.microsoft.com/python/api/overview/azure/cognitive-services?view=azure-python#vision-modules
+    - name: Go
+      href: https://github.com/Azure/azure-sdk-for-go/tree/master/services/cognitiveservices
 - name: Resurser
   items:
-    - name: Exempel
-      href: 'https://azure.microsoft.com/resources/samples/?service=cognitive-services&term=vision'
-    - name: Prissättning
-      href: 'https://azure.microsoft.com/pricing/details/cognitive-services/custom-vision-service/'
-    - name: Exportera eller ta bort kontodata
-      href: ./export-delete-data.md
-    - name: UserVoice
-      href: 'https://cognitive.uservoice.com/forums/598141-custom-vision-service'
-    - name: Stack Overflow
-      href: 'https://stackoverflow.com/questions/tagged/microsoft-cognitive'
-    - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/?category=ai-machine-learning'
-    - name: Regional tillgänglighet
-      href: 'https://azure.microsoft.com/global-infrastructure/services/'
-    - name: Begränsningar och kvoter
-      href: limits-and-quotas.md
+  - name: Exempel
+    href: https://azure.microsoft.com/resources/samples/?service=cognitive-services&term=vision
+  - name: Prissättning
+    href: https://azure.microsoft.com/pricing/details/cognitive-services/custom-vision-service/
+  - name: Exportera eller ta bort kontodata
+    href: ./export-delete-data.md
+  - name: UserVoice
+    href: https://cognitive.uservoice.com/forums/598141-custom-vision-service
+  - name: Stack Overflow
+    href: https://stackoverflow.com/questions/tagged/microsoft-cognitive
+  - name: Azure-översikt
+    href: https://azure.microsoft.com/roadmap/?category=ai-machine-learning
+  - name: Regional tillgänglighet
+    href: https://azure.microsoft.com/global-infrastructure/services/
+  - name: Begränsningar och kvoter
+    href: limits-and-quotas.md
+ms.openlocfilehash: 1ab6bbc1e6f5d600d38d65628798f27f33db17a7
+ms.sourcegitcommit: 76797c962fa04d8af9a7b9153eaa042cf74b2699
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/21/2018
+ms.locfileid: "42440264"
