--- a/articles/cognitive-services/Speech-Service/index.yml
+++ b/articles/cognitive-services/Speech-Service/index.yml
@@ -1,15 +1,18 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 0db6620c7433486babebe95090f3682582f1c212
-ms.sourcegitcommit: 1d850f6cae47261eacdb7604a9f17edc6626ae4b
+ms.openlocfilehash: bec19b959aa2ce99a7237894a50c49666341827b
+ms.sourcegitcommit: 3f8f973f095f6f878aa3e2383db0d296365a4b18
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/02/2018
-ms.locfileid: "39422169"
+ms.lasthandoff: 08/20/2018
+ms.locfileid: "42440262"
 documentType: LandingData
-title: Dokumentation om Speech Service och SDK (förhandsversion)
+title: Speech Service och SDK (förhandsversion)
 metadata:
   title: Dokumentation om Speech Service – självstudier, snabbstarter, API-referens – Cognitive Services | Microsoft Docs
-  meta.description: "The Speech Service provides developers an easy way to add powerful speech-enabled features to their applications. \nExamples include&#58; voice command control & dialog, natural speech conversation, speech transcription & dictation, and speech translation.\n"
+  meta.description: >
+    The Speech Service provides developers an easy way to add powerful speech-enabled features to their applications.
+
+    Examples include&#58; voice command control & dialog, natural speech conversation, speech transcription & dictation, and speech translation.
   services: cognitive-services
   author: noellelacharite
   manager: nolachar
@@ -23,7 +26,7 @@ metadata:
   ms.author: nolachar
 abstract:
   description: >
-    Via Speech SDK kan utvecklare med hjälp av <a href="overview">Speech Service</a> lägga till talaktiverade funktioner i sina appar.<br/>
+    Via Speech SDK kan utvecklare med hjälp av <a href="overview">Speech Service</a> lägga till talaktiverade funktioner i sina appar.
 
     Bland funktionerna finns&#58; <i>tal till text</i> (taligenkänning/SR), <i>avsikt</i>, <i>översättning</i> och <i>text till tal</i> (TTS).
 sections:
@@ -49,7 +52,16 @@ sections:
     - image:
         src: media/index/logo_rest_tts.svg
     rows:
-    - title: Windows (x86/x64)
+    - title: Windows 10 (x64)
+      values:
+      - href: quickstart-csharp-uwp
+      - href: quickstart-csharp-windows
+      - href: quickstart-cpp-windows
+      - href: quickstart-csharp-dotnetcore-windows
+      - href: quickstart-java-jre
+      - href: 
+      - href: 
+    - title: Windows 10 (x86)
       values:
       - href: quickstart-csharp-uwp
       - href: quickstart-csharp-windows
@@ -58,11 +70,22 @@ sections:
       - href: 
       - href: 
       - href: 
-    - title: Linux (x86/x64)
+    - title: Linux (x64)
       values:
       - href: 
       - href: 
       - href: quickstart-cpp-linux
+      - href: quickstart-csharp-dotnetcore-windows
+      - href: quickstart-java-jre
+      - href: 
+      - href: 
+    - title: Linux (x86)
+      values:
+      - href: 
+      - href: 
+      - href: quickstart-cpp-linux
+      - href: 
+      - href: 
       - href: 
       - href: 
     - title: Android (ARM32/ARM64)
@@ -112,6 +135,13 @@ sections:
         &nbsp;&#8226; <a href="https://aka.ms/csspeech/cppref">C++ API</a><br/>
 
         &nbsp;&#8226; <a href="https://aka.ms/csspeech/javaref">Java API</a>
+    - title: Vanliga frågor och svar
+      html: >
+        &nbsp;&#8226; <a href="faq-stt">Tal till text</a><br/>
+
+        &nbsp;&#8226; <a href="faq-text-to-speech">Text till tal</a><br/>
+
+        &nbsp;&#8226; <a href="https://www.microsoft.com/translator/faq.aspx">Översättning</a>
   - type: paragraph
     text: Använd exemplet och API:t ovan med din prenumerationsnyckel (läs <a href="get-started.md">Prova Speech Service kostnadsfritt</a>).
 - title: Anpassa Speech med dina egna data
