--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -1,107 +1,121 @@
+items:
 - name: Azure Container Registry
   href: ./index.yml
 - name: Översikt
   items:
-    - name: Om Container Registry
-      href: container-registry-intro.md
+  - name: Om Container Registry
+    href: container-registry-intro.md
 - name: Snabbstarter
-  expanded: true
   items:
-    - name: Container Registry – CLI
-      href: container-registry-get-started-azure-cli.md
-    - name: Container Registry – Portal
-      href: container-registry-get-started-portal.md
-    - name: Container Registry – PowerShell
-      href: container-registry-get-started-powershell.md
+  - name: Container Registry – CLI
+    href: container-registry-get-started-azure-cli.md
+  - name: Container Registry – Portal
+    href: container-registry-get-started-portal.md
+  - name: Container Registry – PowerShell
+    href: container-registry-get-started-powershell.md
+  - name: Händelser med Event Grid – CLI
+    href: container-registry-event-grid-quickstart.md
+  expanded: true
 - name: Självstudier
   items:
-    - name: Azure Container Instances
-      href: ../container-instances/container-instances-tutorial-prepare-app.md
-    - name: Azure Kubernetes Service (AKS)
-      href: ../aks/tutorial-kubernetes-prepare-app.md
-    - name: Service Fabric
-      href: ../service-fabric/service-fabric-tutorial-create-container-images.md
-    - name: Skapa containeravbildningar (förhandsgranskning)
-      items:
-        - name: 1 – Skapa avbildningar i Azure
-          href: container-registry-tutorial-quick-build.md
-        - name: 2 – Automatisera skapandet av avbildningar
-          href: container-registry-tutorial-build-task.md
-        - name: 3 – Grundläggande uppdateringar av avbildningar
-          href: container-registry-tutorial-base-image-update.md
-    - name: Geo-replikering
-      items:
-        - name: 1 – Förbered containerregister
-          href: container-registry-tutorial-prepare-registry.md
-        - name: 2 – Distribuera webbprogrammet
-          href: container-registry-tutorial-deploy-app.md
-        - name: 3 – Uppdatera webbprogrammet
-          href: container-registry-tutorial-deploy-update.md
+  - name: Azure Container Instances
+    href: ../container-instances/container-instances-tutorial-prepare-app.md
+  - name: Azure Kubernetes Service (AKS)
+    href: ../aks/tutorial-kubernetes-prepare-app.md
+  - name: Service Fabric
+    href: ../service-fabric/service-fabric-tutorial-create-container-images.md
+  - name: Skapa containeravbildningar (förhandsgranskning)
+    items:
+    - name: 1 – Skapa avbildningar i Azure
+      href: container-registry-tutorial-quick-build.md
+    - name: 2 – Automatisera skapandet av avbildningar
+      href: container-registry-tutorial-build-task.md
+    - name: 3 – Grundläggande uppdateringar av avbildningar
+      href: container-registry-tutorial-base-image-update.md
+  - name: Geo-replikering
+    items:
+    - name: 1 – Förbered containerregister
+      href: container-registry-tutorial-prepare-registry.md
+    - name: 2 – Distribuera webbprogrammet
+      href: container-registry-tutorial-deploy-app.md
+    - name: 3 – Uppdatera webbprogrammet
+      href: container-registry-tutorial-deploy-update.md
 - name: Begrepp
   items:
-    - name: 'SKU:er för Container Registry'
-      href: container-registry-skus.md
-    - name: Bildlagring
-      href: container-registry-storage.md
-    - name: Bygg och korrigera med ACR Build
-      href: container-registry-build-overview.md
-    - name: Geo-replikering
-      href: container-registry-geo-replication.md
-    - name: Registrera metodtips
-      href: container-registry-best-practices.md
+  - name: SKU:er för Container Registry
+    href: container-registry-skus.md
+  - name: Bildlagring
+    href: container-registry-storage.md
+  - name: Bygg och korrigera med ACR Build
+    href: container-registry-build-overview.md
+  - name: Geo-replikering
+    href: container-registry-geo-replication.md
+  - name: Registrera metodtips
+    href: container-registry-best-practices.md
 - name: Instruktionsguider
   items:
-    - name: Skicka/hämta en avbildning
-      href: container-registry-get-started-docker-cli.md
-    - name: Visa lagringsplatser
-      href: container-registry-repositories.md
-    - name: Ta bort containeravbildningar
-      href: container-registry-delete.md
-    - name: Uppgradera ett klassiskt register
-      href: container-registry-upgrade.md
-    - name: Använda ACR-webhooks
-      href: container-registry-webhook.md
-    - name: Autentisering
-      items:
-        - name: Översikt över autentisering
-          href: container-registry-authentication.md
-        - name: Autentisering av tjänstens huvudnamn
-          href: container-registry-auth-service-principal.md
-        - name: Azure Container Instances
-          href: container-registry-auth-aci.md
-        - name: Azure Kubernetes Service (AKS)
-          href: container-registry-auth-aks.md
+  - name: Skicka/hämta en avbildning
+    href: container-registry-get-started-docker-cli.md
+  - name: Visa lagringsplatser
+    href: container-registry-repositories.md
+  - name: Ta bort containeravbildningar
+    href: container-registry-delete.md
+  - name: Innehållsförtroende (förhandsversion)
+    href: container-registry-content-trust.md
+  - name: Uppgradera ett klassiskt register
+    href: container-registry-upgrade.md
+  - name: Använda ACR-webhooks
+    href: container-registry-webhook.md
+  - name: Autentisering
+    items:
+    - name: Översikt över autentisering
+      href: container-registry-authentication.md
+    - name: Autentisering av tjänstens huvudnamn
+      href: container-registry-auth-service-principal.md
+    - name: Azure Container Instances
+      href: container-registry-auth-aci.md
+    - name: Azure Kubernetes Service (AKS)
+      href: container-registry-auth-aks.md
 - name: Referens
   items:
-    - name: Azure CLI
-      href: /cli/azure/acr
-    - name: REST
-      href: /rest/api/containerregistry
-    - name: PowerShell
-      href: '/powershell/module/azurerm.containerregistry#container_registry'
-    - name: .NET
-      href: /dotnet/api/overview/azure/containerregistry
-    - name: Python
-      href: /python/api/overview/azure/container-registry
-    - name: Java
-      href: /java/api/overview/azure/containerregistry
-    - name: Node.js
-      href: /javascript/api/overview/azure/container-registry
-    - name: Resource Manager-mall
-      href: /azure/templates/microsoft.containerregistry/registries
-    - name: Webhook-schema
-      href: container-registry-webhook-reference.md
+  - name: Azure CLI
+    href: /cli/azure/acr
+  - name: REST
+    href: /rest/api/containerregistry
+  - name: PowerShell
+    href: /powershell/module/azurerm.containerregistry#container_registry
+  - name: .NET
+    href: /dotnet/api/overview/azure/containerregistry
+  - name: Python
+    href: /python/api/overview/azure/container-registry
+  - name: Java
+    href: /java/api/overview/azure/containerregistry
+  - name: Node.js
+    href: /javascript/api/overview/azure/container-registry
+  - name: Resource Manager-mall
+    href: /azure/templates/microsoft.containerregistry/registries
+  - name: Webhook-schema
+    href: container-registry-webhook-reference.md
+  - name: Event Grid-schema
+    href: ../event-grid/event-schema-container-registry.md
+    maintainContext: true
 - name: Resurser
   items:
-    - name: Regional tillgänglighet
-      href: 'https://azure.microsoft.com/regions/services/'
-    - name: Prissättning
-      href: 'https://azure.microsoft.com/pricing/details/container-registry/'
-    - name: Översikt
-      href: 'https://aka.ms/acr/roadmap'
-    - name: Ge produktfeedback
-      href: 'https://feedback.azure.com/forums/903958-azure-container-registry'
-    - name: Stack Overflow
-      href: 'http://stackoverflow.com/questions/tagged/azure-container-registry'
-    - name: Videoklipp
-      href: 'https://azure.microsoft.com/resources/videos/index/?services=container-registry&sort=newest'
+  - name: Regional tillgänglighet
+    href: https://azure.microsoft.com/regions/services/
+  - name: Prissättning
+    href: https://azure.microsoft.com/pricing/details/container-registry/
+  - name: Översikt
+    href: https://aka.ms/acr/roadmap
+  - name: Ge produktfeedback
+    href: https://feedback.azure.com/forums/903958-azure-container-registry
+  - name: Stack Overflow
+    href: http://stackoverflow.com/questions/tagged/azure-container-registry
+  - name: Videoklipp
+    href: https://azure.microsoft.com/resources/videos/index/?services=container-registry&sort=newest
+ms.openlocfilehash: 67ff62865eb6a14dc619d7ba37310acff0527787
+ms.sourcegitcommit: 3f8f973f095f6f878aa3e2383db0d296365a4b18
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/20/2018
+ms.locfileid: "41927700"
