--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -1,11 +1,3 @@
-### YamlMime:OriginYaml
-ms.openlocfilehash: a3d1862f3604c53af106bf90040d2380421a004d
-ms.sourcegitcommit: 1f0587f29dc1e5aef1502f4f15d5a2079d7683e9
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 08/07/2018
-ms.locfileid: "39595872"
-metadata: {}
 items:
 - name: Dokumentation om Azure Cosmos DB
   href: index.yml
@@ -14,7 +6,6 @@ items:
   - name: Om Azure Cosmos DB
     href: introduction.md
 - name: Snabbstarter
-  expanded: true
   items:
   - name: SQL
     items:
@@ -78,6 +69,7 @@ items:
       href: create-cassandra-dotnet.md
     - name: Python
       href: create-cassandra-python.md
+  expanded: true
 - name: Begrepp
   items:
   - name: Global distribution
@@ -107,7 +99,6 @@ items:
     - name: Appar för sociala medier
       href: social-media-apps.md
 - name: Flera modeller
-  expanded: true
   items:
   - name: SQL API-dokument
     items:
@@ -247,6 +238,10 @@ items:
           href: odbc-driver.md
         - name: Använd Spring Boot Starter med API:er för SQL
           href: https://docs.microsoft.com/java/azure/spring-framework/configure-spring-boot-starter-java-app-with-cosmos-db?toc=/azure/cosmos-db/toc.json
+      - name: Skapa lösningar
+        items:
+        - name: Analys av data från detaljhandel
+          href: changefeed-ecommerce-solution.md
     - name: Referens
       items:
       - name: Async Java
@@ -335,6 +330,8 @@ items:
         href: mongodb-readpreference.md
       - name: Indexering
         href: mongodb-indexing.md
+      - name: TTL-värde – MongoDB
+        href: mongodb-time-to-live.md
       - name: Visualisera din information med Power BI
         href: powerbi-visualize.md
     - name: Resurser
@@ -357,6 +354,8 @@ items:
       items:
       - name: Grafpartitionering
         href: graph-partitioning.md
+      - name: Importera diagramdata med BulkExecutor
+        href: bulk-executor-graph-dotnet.md
     - name: Resurser
       items:
       - name: Visual Studio Code-tillägg
@@ -427,6 +426,7 @@ items:
         href: tutorial-develop-cassandra-java.md
       - name: 2 – Importera
         href: cassandra-import-data.md
+  expanded: true
 - name: Instruktionsguider
   items:
   - name: Hantera
@@ -441,7 +441,7 @@ items:
       href: manage-account.md
     - name: Dataflöde
       href: set-throughput.md
-    - name: Få data att upphöra att gälla automatiskt
+    - name: Time to live
       href: time-to-live.md
     - name: Diagnostikloggning
       href: logging.md
@@ -493,3 +493,9 @@ items:
     href: http://research.microsoft.com/apps/pubs/default.aspx?id=206913
   - name: Faktablad
     href: whitepapers.md
+ms.openlocfilehash: 431962982c9480fddd1b5450a9505a0052158980
+ms.sourcegitcommit: 3f8f973f095f6f878aa3e2383db0d296365a4b18
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/20/2018
+ms.locfileid: "41929463"
