--- a/articles/iot-accelerators/index.yml
+++ b/articles/iot-accelerators/index.yml
@@ -1,9 +1,15 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: e901ba81b92a5d7a7454fbfaca96902e1e8008a8
+ms.sourcegitcommit: 4ea0cea46d8b607acd7d128e1fd4a23454aa43ee
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/14/2018
+ms.locfileid: "41929065"
 documentType: LandingData
 title: Dokumentation för IoT-lösningsacceleratorer
 metadata:
   title: Dokumentation för IoT-lösningsacceleratorer
-  meta.description: Get started quickly building your IoT solutions with the IoT solution accelerators. Add new devices and connect existing ones using device SDKs for multiple platforms, including Linux, Windows, and real-time operating systems. Easily scale from just a few sensors to millions of simultaneously connected devices and rely on the global availability of Azure, no matter how large or small your project.
+  meta.description: Learn how to use the IoT solution accelerators. These articles show you how to use the solution accelerators to kick-start your implementation of common IoT scenarios such as remote monitoring, industrial IoT, predictive maintenance, and device simulation.
   services: iot-accelerators
   author: dominicbetts
   manager: timlt
@@ -11,16 +17,10 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 06/19/2018
+  ms.date: 07/24/2018
   ms.author: dobett
-  ms.openlocfilehash: 23eeb56e071eb06d4a740e268c1de29f96dd05d8
-  ms.sourcegitcommit: 727a0d5b3301fe20f20b7de698e5225633191b06
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 07/19/2018
-  ms.locfileid: "39143997"
 abstract:
-  description: Kom igång snabbt med att bygga dina IoT-lösningar med IoT-lösningsacceleratorer. Lägg till nya enheter och anslut befintliga, med hjälp av enhets-SDK:er för flera plattformar, inklusive Linux, Windows och operativsystem i realtid. Gå från några sensorer till miljontals samtidigt anslutna enheter, och förlita dig på Azures globala tillgänglighet, oavsett projektets storlek.
+  description: Lär dig hur du använder IoT-lösningsacceleratorer. De här artiklarna beskriver hur du använder lösningsacceleratorer för att snabbt komma igång med din implementering av vanliga IoT-scenarier, till exempel fjärrövervakning, industri-IoT, förutsägande underhåll och enhetssimulering.
 sections:
 - title: Snabbstarter på 5 minuter
   items:
