--- a/articles/key-vault/index.yml
+++ b/articles/key-vault/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: cfa1c2358926970f33827706480a53f42bed8339
-ms.sourcegitcommit: 96f498de91984321614f09d796ca88887c4bd2fb
+ms.openlocfilehash: b797090b98d7ab552c3c342eeea341fd86c331c3
+ms.sourcegitcommit: f057c10ae4f26a768e97f2cb3f3faca9ed23ff1b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/02/2018
-ms.locfileid: "39411666"
+ms.lasthandoff: 08/17/2018
+ms.locfileid: "41929675"
 documentType: LandingData
 title: Dokumentation om Key Vault
 metadata:
@@ -22,8 +22,19 @@ metadata:
   ms.date: 01/23/2017
   ms.author: carolz
 abstract:
-  description: Lär dig hur du använder Key Vault för att skydda och hantera krypteringsnycklar och hemligheter som används av molnprogram och molntjänster. Självstudier, API-referenser och annan dokumentation visar hur du skapar och underhåller nycklar som ger åtkomst till och krypterar dina resurser och lösningar.
+  description: Lär dig hur du använder Key Vault för att skydda och hantera krypteringsnycklar och hemligheter som används av molnprogram och molntjänster. Självstudier, API-referenser och annan dokumentation visar hur du skapar och underhåller nycklar och hemligheter som ger åtkomst till och krypterar dina resurser och lösningar.
 sections:
+- items:
+  - type: list
+    style: cards
+    className: cardsM
+    columns: 3
+    items:
+    - href: /azure/key-vault/key-vault-whatis
+      html: <p>Läs om grundläggande begrepp relaterade till Azure Key Vault.</p>
+      image:
+        src: https://docs.microsoft.com/en-us/media/common/i_article.svg
+      title: Begrepp
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
@@ -62,11 +73,6 @@ sections:
       image:
         src: media/index/get-started.svg
         href: /azure/key-vault/key-vault-use-from-web-application
-    - title: Konfigurera Azure Key Vault med nyckelgranskning och -rotation från slutpunkt till slutpunkt
-      href: /azure/key-vault/key-vault-key-rotation-log-monitoring
-      image:
-        src: media/index/tutorial.svg
-        href: /azure/key-vault/key-vault-key-rotation-log-monitoring
 - title: Referens
   items:
   - type: list
