--- a/articles/managed-applications/toc.yml
+++ b/articles/managed-applications/toc.yml
@@ -1,98 +1,107 @@
+items:
 - name: Dokumentation om Azure-hanterade program
   href: index.yml
 - name: Översikt
   items:
-    - name: Om hanterade program
-      href: overview.md
+  - name: Om hanterade program
+    href: overview.md
 - name: Snabbstarter
-  expanded: true
   items:
-    - name: Skapa hanterat program
-      href: managed-apps-quickstart-cli.md
+  - name: Skapa hanterat program
+    href: managed-apps-quickstart-cli.md
+  expanded: true
 - name: Självstudier
   items:
-    - name: Skapa hanterade programfiler
-      href: publish-service-catalog-app.md
-    - name: Använda marknadsplatsprogram
-      href: publish-marketplace-app.md
+  - name: Skapa hanterade programfiler
+    href: publish-service-catalog-app.md
+  - name: Använda marknadsplatsprogram
+    href: publish-marketplace-app.md
 - name: Exempel
   items:
-    - name: Azure CLI
-      href: cli-samples.md
-    - name: Azure PowerShell
-      href: powershell-samples.md
-    - name: Hanterade programlösningar
-      href: sample-projects.md
+  - name: Azure CLI
+    href: cli-samples.md
+  - name: Azure PowerShell
+    href: powershell-samples.md
+  - name: Hanterade programlösningar
+    href: sample-projects.md
 - name: Instruktionsguider
   items:
-    - name: Definiera användargränssnitt
-      href: create-uidefinition-overview.md
-    - name: Uppdatera hanterade resurser
-      href: update-managed-resources.md
-    - name: Använda portalen för att publicera
-      href: publish-portal.md
-    - name: Använda en hemlighet från Key Vault
-      href: key-vault-access.md
+  - name: Skapa portalgränssnitt
+    href: create-uidefinition-overview.md
+  - name: Testa portalgränssnitt
+    href: test-createuidefinition.md
+  - name: Uppdatera hanterade resurser
+    href: update-managed-resources.md
+  - name: Använda portalen för att publicera
+    href: publish-portal.md
+  - name: Använda en hemlighet från Key Vault
+    href: key-vault-access.md
 - name: Referens
   items:
-    - name: Azure CLI
-      href: /cli/azure/managedapp
-    - name: PowerShell
-      href: /powershell/module/azurerm.resources
-    - name: REST
-      href: /rest/api/resources/
-    - name: Funktioner för användargränssnitt
-      href: create-uidefinition-functions.md
-    - name: Element för användargränssnitt
-      href: create-uidefinition-elements.md
+  - name: Azure CLI
+    href: /cli/azure/managedapp
+  - name: PowerShell
+    href: /powershell/module/azurerm.resources
+  - name: REST
+    href: /rest/api/resources/
+  - name: Funktioner för användargränssnitt
+    href: create-uidefinition-functions.md
+  - name: Element för användargränssnitt
+    href: create-uidefinition-elements.md
+    items:
+    - name: Common
       items:
-        - name: Common
-          items:
-            - name: DropDown
-              href: microsoft-common-dropdown.md
-            - name: FileUpload
-              href: microsoft-common-fileupload.md
-            - name: InfoBox
-              href: microsoft-common-infobox.md
-            - name: OptionsGroup
-              href: microsoft-common-optionsgroup.md
-            - name: PasswordBox
-              href: microsoft-common-passwordbox.md
-            - name: Section
-              href: microsoft-common-section.md
-            - name: TextBlock
-              href: microsoft-common-textblock.md
-            - name: TextBox
-              href: microsoft-common-textbox.md
-        - name: Compute
-          items:
-            - name: CredentialsCombo
-              href: microsoft-compute-credentialscombo.md
-            - name: SizeSelector
-              href: microsoft-compute-sizeselector.md
-            - name: UserNameTextBox
-              href: microsoft-compute-usernametextbox.md
-        - name: Nätverk
-          items:
-            - name: AvailabilityZoneDropDown
-              href: microsoft-network-availabilityzonedropdown.md
-            - name: PublicIPAddressCombo
-              href: microsoft-network-publicipaddresscombo.md
-            - name: VirtualNetworkCombo
-              href: microsoft-network-virtualnetworkcombo.md
-        - name: Storage
-          items:
-            - name: MultiStorageAccountCombo
-              href: microsoft-storage-multistorageaccountcombo.md
-            - name: StorageAccountSelector
-              href: microsoft-storage-storageaccountselector.md
+      - name: DropDown
+        href: microsoft-common-dropdown.md
+      - name: FileUpload
+        href: microsoft-common-fileupload.md
+      - name: InfoBox
+        href: microsoft-common-infobox.md
+      - name: OptionsGroup
+        href: microsoft-common-optionsgroup.md
+      - name: PasswordBox
+        href: microsoft-common-passwordbox.md
+      - name: Section
+        href: microsoft-common-section.md
+      - name: TextBlock
+        href: microsoft-common-textblock.md
+      - name: TextBox
+        href: microsoft-common-textbox.md
+    - name: Compute
+      items:
+      - name: CredentialsCombo
+        href: microsoft-compute-credentialscombo.md
+      - name: SizeSelector
+        href: microsoft-compute-sizeselector.md
+      - name: UserNameTextBox
+        href: microsoft-compute-usernametextbox.md
+    - name: Nätverk
+      items:
+      - name: AvailabilityZoneDropDown
+        href: microsoft-network-availabilityzonedropdown.md
+      - name: PublicIPAddressCombo
+        href: microsoft-network-publicipaddresscombo.md
+      - name: VirtualNetworkCombo
+        href: microsoft-network-virtualnetworkcombo.md
+    - name: Storage
+      items:
+      - name: MultiStorageAccountCombo
+        href: microsoft-storage-multistorageaccountcombo.md
+      - name: StorageAccountSelector
+        href: microsoft-storage-storageaccountselector.md
 - name: Resurser
   items:
-    - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/'
-    - name: Prissättning
-      href: 'https://azure.microsoft.com/pricing/details/managed-applications/'
-    - name: Priskalkylator
-      href: 'https://azure.microsoft.com/pricing/calculator/'
-    - name: Stack Overflow
-      href: 'http://stackoverflow.com/questions/tagged/azure-managedapps'
+  - name: Azure-översikt
+    href: https://azure.microsoft.com/roadmap/
+  - name: Prissättning
+    href: https://azure.microsoft.com/pricing/details/managed-applications/
+  - name: Priskalkylator
+    href: https://azure.microsoft.com/pricing/calculator/
+  - name: Stack Overflow
+    href: http://stackoverflow.com/questions/tagged/azure-managedapps
+ms.openlocfilehash: c468b30361163d39b94af999c9767cbc491a06ac
+ms.sourcegitcommit: 4ea0cea46d8b607acd7d128e1fd4a23454aa43ee
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 08/14/2018
+ms.locfileid: "41927236"
